regression/fail/modules.8.sml
signature S =
   sig
      type t = int
      type u
      sharing type t = u
   end
